lib/tests/fixtures/compiler/evaluation/new_invalid_param_tuple.pp
notice Tuple[String](1)
